2018-07-20  Carl Hetherington  <cth@carlh.net>

	* Support closed-caption creation (#725).

2018-07-19  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2018-07-18  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2018-07-09  Carl Hetherington  <cth@carlh.net>

	* Maintain content sequence after trim (#1327).

	* Keep video content position and trim on frame boundaries
	even if the content's frame rate is forced to a new value (#1335).

2018-07-07  Carl Hetherington  <cth@carlh.net>

	* Add export button for cinemas XML file (#1319).

	* Give better errors when incorrect KDMs are used (#1326).

2018-07-06  Carl Hetherington  <cth@carlh.net>

	* Add option to enable/disable KDM forensic marking.

2018-07-04  Carl Hetherington  <cth@carlh.net>

	* Sort audio views in order of their first mapped DCP channel (#1279).

	* Label audio content with its DCP channel mapping, gain and delay
	in the timeline (#1279).

	* Add scrolling and zoom to the timeline (#1279, #1320).

2018-07-01  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-06-29  Carl Hetherington  <cth@carlh.net>

	* Jump to selected subtitle when "jump to selecte content" is enabled (#1200).

2018-06-10  Carl Hetherington  <cth@carlh.net>

	* Include Ls/Rs and Lfe in 5.1-to-stereo downmix in the player.

2018-06-09  Carl Hetherington  <cth@carlh.net>

	* Fix bad parsing of ASS lines embedded into FFmpeg files
	and containing commas.

	* Add option to open a DCP in the player (#1312).

2018-06-08  Carl Hetherington  <cth@carlh.net>

	* Add support for rotation and flipping of video sources,
	and auto-detect when this is necessary (#966).

2018-06-05  Carl Hetherington  <cth@carlh.net>

	* Don't allow the queue to get too big with repeat frames
	otherwise there's a long delay at the end of the job
	while they are written (#1317).

2018-06-04  Carl Hetherington  <cth@carlh.net>
